[package]
name = "sbh"
edition = "2021"
version = "0.2.0"
license = "GNU GPLv3"
description = "Session Buddy Helper"
homepage = "https://www.asdf.cx/sbh"
authors = ["René Wilhelm <rxw1@pm.me>"]

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.1.10", features = ["derive"] }
dirs = "4.0"
globwalk = "0.8.1"
serde_json = "1.0.94"
serde = { version = "1.0.157", features = ["derive"] }
sqlx = { version = "0.7.0-alpha.2", features = [ "sqlite", "runtime-tokio", "json", "chrono" ] }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
whoami = "1.4.0"
wsl = "0.1.0"

[profile.release]
codegen-units = 1 # reduce parallel code generation units
lto = true # enable link time optimization
opt-level = "z" # optimize for size
panic = "abort" # abort on panic
strip = true # strip symbols from binary
