[package]
name = "sbh"
license = "MIT"
edition = "2021"
version = "0.3.1"
readme = "README.md"
description = "Session Buddy Helper"
homepage = "https://www.asdf.cx/sbh"
authors = ["René <rxw1@pm.me>"]
keywords = ["chrome", "extension", "cli"]
repository = "https://github.com/rxw1/sbh"
categories = ["command-line-utilities"]

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
dirs = "5.0"
globwalk = "0.8.1"
serde_json = "1.0.95"
serde = { version = "1.0.159", features = ["derive"] }
sqlx = { version = "0.7.0-alpha.2", features = [ "sqlite", "runtime-tokio", "json", "chrono" ] }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
whoami = "1.4.0"
wsl = "0.1.0"
rand = "0.8.5"
lexopt = "0.3.0"
clap = { version = "4.2.1", features = ["derive"] }
regex = "1.7.3"
textwrap = "0.16.0"
dialoguer = "0.10.3"
anyhow = "1.0.70"
log = "0.4.17"
pretty_env_logger = "0.4.0"
env_logger = "0.10.0"

[profile.release]
codegen-units = 1 # reduce parallel code generation units
lto = true # enable link time optimization
opt-level = "z" # optimize for size
panic = "abort" # abort on panic
strip = true # strip symbols from binary
